Fixed text alignment.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ button {
 .results { 
 
     margin: 30px;
-    padding: 20px;ß
+    padding: 20px;
     text-align: center;
 
 }
